--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
     <div class="flexbox-container">
       <div>
         <h3>Repositories</h3>
-        <div id="results"></div>
+        <div id="results">
+          <script id="results-template" type="text/x-handlebars-template">
+            {{#each items }}
+            <h2><a href="{{ html_url }}">{{ name }}</a></h2>
+            <p><a href="#" data-repository="{{ name }}" data-owner="{{ owner.login }}" onclick="showCommits(this)">Show Commits</a></p>
+            <p>{{ description }}</p>
+            <div>{{> userDetails owner }}</div>
+            <hr>
+            {{/each}}
+          </script>
+        </div>
       </div>
       <div>
         <h3>Details</h3>
