--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
             {{/each }}
             </ul>
           </script>
+          <script id="user-details-partial" type="text/x-handlebars-template">
+            <h4><a href="{{ url }}">{{ login }}</a></h4>
+            <img width="32px" height="32px" src="{{ avatar_url }}">
+        </script>
         </div>
       </div>
     </div>
