--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
     </div>
     <script src="jquery-3.1.0.min.js"></script>
     <script src="index.js"></script>
+    <script type='text/javascript' src='js/handlebars-v4.0.5.js'></script>
   </body>
 </html>
