--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     </style>
   </head>
   <body>
+    <script src="jquery-3.1.0.min.js"></script>
+    <script src="handlebars.js"></script>
+    <script src="index.js"></script>    
     <main id="main">
       <input type="text" id="searchTerms">
       <a href="#" id="search" onclick="searchRepositories()">Search Repositories</a>
